start slide demo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     </head>
     <body>
         <h1 onclick="console.log('ya clicked me!')">Welcome to the Week 3 Lab demo</h1>
+        <p>Hello there!</p>
+
+        <img id="pic" src="images/frog1.jpg" alt="cute frog" />
+
+        <a id="next" class="next_btn" href="#">Next Image ></a>
 
         <script>
-            alert("hello World!");
+            //alert("hello World!");
         </script>
         <script src="js/main.js"></script>
     </body>
